fix deleting of card(not to show a picture) and fix visible area in description in profile

--- a/src/blocks/profile/__description/profile__description.css
+++ b/src/blocks/profile/__description/profile__description.css
@@ -1,4 +1,8 @@
 .profile__description {
+  max-width: 600px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   font-size: 18px;
   line-height: 22px;
   grid-area: description;
